loopdowhile.Poucet2.scala.error
Erreur de compilation :
Poucet2:1: error: Missing closing brace `}' assumed here
var biscuit=0
^Poucet2:18: error: ';' expected but 'while' found.
} while (sortieTrouvee()==false)
  ^Poucet2:22: error: 'while' expected but '}' found.
}
^